--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -1057,9 +1057,15 @@ $COMPONENTS
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 3rem;
+  padding: 0 1rem;
   z-index: 10;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 24px 0px;
+}
+
+@media (min-width: 48em) {
+  .header {
+    padding: 0 3rem;
+  }
 }
 
 .header #bars {
